// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing button should be all classes 1`] = `
<div>
  <button
    class="Main Middle Button"
    data-testid=""
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Testing button should be only Main 1`] = `
<div>
  <button
    class="Main Button"
    data-testid=""
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Testing button should be only Middle 1`] = `
<div>
  <button
    class="Middle Button"
    data-testid=""
    type="button"
  >
    Button
  </button>
</div>
`;
